# FinanceTracker

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  vcpkg.json
db/: DatabaseManager.cpp  DatabaseManager.hpp
db/migrations/: 001_initial_schema.sql
